k8s/base/07-be-deployment.yaml
# Run the hospital backend API from the Nexus Docker Registry.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment-v1
  namespace: hospital
spec:
  replicas: 2
  selector:
    matchLabels:
      app: be-v1
  template:
    metadata:
      labels:
        app: be-v1
    spec:
      imagePullSecrets:
        - name: nexus-registry-secret

      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: be-v1
                topologyKey: kubernetes.io/hostname

      securityContext:
        runAsNonRoot: true
        runAsUser: 1654
        fsGroup: 2000

      volumes:
        - name: be-uploads
          emptyDir: {}

      containers:
        - name: be-v1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          image: 100.112.150.56:8082/ecr-be:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: be-uploads
              mountPath: /app/wwwroot/uploads

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 20

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 18

          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
